syntax = "proto3";

option csharp_namespace = "LPS.Protos.Shared";

package lps.statusmonitor;

// Request to get iteration statuses by FQDN
message StatusQueryRequest {
  string fully_qualified_name = 1;
}

// Enum representing ExecutionStatus
enum ExecutionStatus 
{
  SCHEDULED = 0;
  ONGOING = 1;
  COMPLETED = 2;
  FAILED = 3;
  TERMINATED=4;
  CANCELLED = 5;
  UNKOWN = -1; 
}

// Response with statuses
message StatusQueryResponse {
  repeated ExecutionStatus statuses = 1;
}

message MonitorRequest {
  string fully_qualified_name = 1;
}

message MonitorResponse {
  bool success = 1;
  string message = 2;
}


// Service definition
service MonitorService {
	rpc QueryIterationStatuses (StatusQueryRequest) returns (StatusQueryResponse);
	rpc Monitor (MonitorRequest) returns (MonitorResponse);
}
